--- a/module/usuario/view/usuario/usuario/login.phtml
+++ b/module/usuario/view/usuario/usuario/login.phtml
@@ -30,6 +30,18 @@
         </div>
 			</div>
 
+
+      <hr class="colorgraph">
+      <div class="row">
+        <div class="col-md-6">
+          <input type="button" value="Login google" class="btn btn-primary btn-lg pull-right">
+        </div>
+
+        <div class="col-md-6">
+          <input type="button" value="Login microsoft" class="btn btn-primary btn-lg pull-right">
+        </div>
+      </div>
+
       
 		</form>
 	</div>
