--- a/module/application/view/layout/layout.phtml
+++ b/module/application/view/layout/layout.phtml
@@ -13,164 +13,79 @@
         <?php echo $this->headLink(array('rel' => 'shortcut icon', 'type' => 'image/vnd.microsoft.icon', 'href' => $this->basePath() . '/img/favicon.ico'))
                         ->prependStylesheet($this->basePath() . '/css/style.css')
                         ->prependStylesheet($this->basePath() . '/css/autocomplete.css')
-                        ->prependStylesheet($this->basePath() . '/css/bootstrap.min.css')
+                        ->prependStylesheet($this->basePath() . '/css/jquery-confirm.css')
                         ; ?>
         <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
 
           <?php echo $this->headScript()
             ->prependFile($this->basePath() . '/js/maskMoney.js')
             ->prependFile($this->basePath() . '/js/jquery.maskedinput.min.js')
+            ->prependFile($this->basePath() . '/js/jquery-confirm.js')
             ->prependFile($this->basePath() . '/js/funcoes.js')
-            ->prependFile($this->basePath() . '/js/bootbox.min.js')
-            ->prependFile($this->basePath() . '/js/bootstrap.min.js')
+            //->prependFile($this->basePath() . '/js/bootstrap.min.js')
             ->prependFile($this->basePath() . '/js/jquery.autocomplete.js')
+            ->prependFile($this->basePath() . '/js/PowerBI/dist/powerbi.js')
             ->prependFile($this->basePath() . '/js/jquery.min.js'); ?>
 
   </head>
-  <body>
-    <div class="page-wrapper chiller-theme toggled">
-  <a id="show-sidebar" class="btn btn-sm btn-dark" href="#">
-    <i class="fas fa-bars"></i>
-  </a>
-  <nav id="sidebar" class="sidebar-wrapper">
-    <div class="sidebar-content">
-      <div class="sidebar-brand">
-        <a href="#">pro sidebar</a>
-        <div id="close-sidebar">
-          <i class="fas fa-times"></i>
-        </div>
-      </div>
-      <!-- sidebar-search  -->
-      <div class="sidebar-menu">
+<body>
+<div id="conteiner" class="escuro" style="width: 100% !important;">
+        <nav class="menu nav menu-sistema">
+    <div class="logo">
         <a href="<?= $this->url('indexCliente'); ?>">
-          <img src="<?= $this->basePath($clienteSelecionado['logo']); ?>" class="rounded mx-auto d-block" alt="Responsive image">
+          <span style="background-image: url(<?= $this->basePath($clienteSelecionado['logo']); ?>);"></span>
+          <h1>Danilo Luna</h1>
         </a>
-        <ul>
-          <?php foreach ($menuDashboards as $menu): ?>
-            <?php if($menu['dashboards'] == false): ?>
-              <li>
-                <a href="<?= $this->url('visualizarDashboard', array('id' => $menu['id'])); ?>">
-                  <img src="<?= $this->basePath($menu['icone']); ?>">
-                  <span><?= $menu['nome'] ?></span>
-                </a>
-              </li>
-            <?php else: ?>
-              <li class="sidebar-dropdown">
-                <a href="#">
-                  <img src="<?= $this->basePath($menu['icone_categoria']) ?>">
-                  <span><?= $menu['nome_categoria'] ?></span>
-                </a>
-                <div class="sidebar-submenu">
-                  <ul>
-                    <?php foreach ($menu['dashboards'] as $dashboard): ?>
-                      <li>
-                        <a href="<?= $this->url('visualizarDashboard', array('id' => $dashboard['id'])); ?>"><img src="<?= $this->basePath($dashboard['icone']); ?>"> <?= $dashboard['nome'] ?></a>
-                      </li>
-                    <?php endforeach; ?>
-                  </ul>
-                </div>
-              </li>
-
-            <?php endif; ?>
-          <?php endforeach; ?>
-          
-           <li class="sidebar-dropdown">
-            <a href="#">
-              <i class="fa fa-tachometer-alt"></i>
-              <span>Configurações</span>
-            </a>
-            <div class="sidebar-submenu">
-              <ul>
-                <li>
-                  <a href="<?= $this->url('indexCategoria') ?>">Categorias de dashboard</a>
-                </li>
-                <li>
-                  <a href="<?= $this->url('indexCliente'); ?>">Clientes</a>
-                </li>
-                <li>
-                  <a href="<?= $this->url('indexDashboard') ?>">Dashboards</a>
-                </li>
-                <li>
-                  <a href="<?= $this->url('indexInvoice') ?>">Invoices</a>
-                </li>
-                <li>
-                  <a href="<?= $this->url('usuario'); ?>">Usuários</a>
-                </li>
-              </ul>
-            </div>
-          </li>
-          <li>
-            <a href="#" onclick="alert('Abre a interface de ajuda');">
-              <i class="fa fa-book"></i>
-              <span>Ajuda</span>
-            </a>
-          </li>
-          <li>
-            <a href="<?= $this->url('logout'); ?>">
-              <i class="fa fa-book"></i>
-              <span>Sair</span>
-            </a>
-          </li>
-        </ul>
-      </div>
-      <!-- sidebar-menu  -->
     </div>
-  </nav>
-  <!-- sidebar-wrapper  -->
-  <main class="page-content">
-      <div class="container theme-showcase" role="main" id="alertasLayout" style="margin-top:100px;padding: 0px;">
-        <?= $this->flashMessenger()->render('error', array('alert', 'alert-danger')) ?>   
-
-        <?= $this->flashMessenger()->render('warning', array('alert',  'alert-warning')) ?>
+    <ul>
+        <li><a href=""><i class="fas fa-home"></i>Principal</a></li>
+        <li><a href="<?= $this->url('visualizarDashboard', array('id' => 1)); ?>"><i class="fas fa-angle-right"></i>Dashboard avulsa 1</a></li>
         
-        <?= $this->flashMessenger()->render('success', array('alert',  'alert-success')) ?>
-      </div>
+        <li><a href="<?= $this->url('indexCategoria') ?>"><i class="fas fa-angle-right"></i>Categorias de dashboard</a></li>
+        <li><a href="<?= $this->url('indexCliente'); ?>"><i class="fas fa-angle-right"></i>Clientes</a></li>
+        <li><a href="<?= $this->url('indexDashboard') ?>"><i class="fas fa-angle-right"></i>Dashboards</a></li>
+        <li><a href="<?= $this->url('indexInvoice') ?>"><i class="fas fa-angle-right"></i>Invoices</a></li>
+        <li><a href="<?= $this->url('usuario'); ?>"><i class="fas fa-angle-right"></i>Usuários</a></li>
+        <li><hr></li>
+        <li><a><i class="fas fa-sign-out-alt"></i>Logout</a></li>
+    </ul>
+</nav> 
 
-      <?php echo $this->content; ?>
-  </main>
-  <!-- page-content" -->
+<section class="wrapper-slide">
+    <!-- .slideThree -->
+    <div class="slideThree">  
+        <input class="luz" type="checkbox" value="None" id="slideThree" name="check" checked="checked">
+        <label for="slideThree"></label>
+    </div>
+    <!-- end .slideThree -->
+</section>
+
+<?= $this->flashMessenger()->render('error', array('alert', 'alert-danger')) ?>   
+
+<?= $this->flashMessenger()->render('warning', array('alert',  'alert-warning')) ?>
+
+<?= $this->flashMessenger()->render('success', array('alert',  'alert-success')) ?>
+
+<?php echo $this->content; ?>
+
 </div>
-    
-    
-  </body>
 
 
-
-
-  <?php echo $this->inlineScript() ?>
-  <script type="text/javascript">
-    jQuery(function ($) {
-      $(".sidebar-dropdown > a").click(function() {
-      $(".sidebar-submenu").slideUp(200);
-      if (
-        $(this)
-          .parent()
-          .hasClass("active")
-      ) {
-        $(".sidebar-dropdown").removeClass("active");
-        $(this)
-          .parent()
-          .removeClass("active");
-      } else {
-        $(".sidebar-dropdown").removeClass("active");
-        $(this)
-          .next(".sidebar-submenu")
-          .slideDown(200);
-        $(this)
-          .parent()
-          .addClass("active");
-      }
+</body>
+<script>
+    $(function () {
+        $('input.luz').on('change', function () {
+            if ($(this).is(":checked")) {
+                $('#conteiner').addClass('escuro').removeClass('claro');
+            } else {
+                $('#conteiner').addClass('claro').removeClass('escuro');
+            }
+        }).trigger('change');
     });
+   
+</script>
 
-    $("#close-sidebar").click(function() {
-      $(".page-wrapper").removeClass("toggled");
-    });
-    $("#show-sidebar").click(function() {
-      $(".page-wrapper").addClass("toggled");
-    });
-  });
 
-  </script>
 </html>
 
 
