--- a/module/application/view/partials/formPesquisa.phtml
+++ b/module/application/view/partials/formPesquisa.phtml
@@ -1,54 +1,21 @@
-  <div class="row">
-    <div class="panel panel-default">
-      <div class="panel-body">
-        <div class="form-group">
-          <form class="form-inline" role="form" method="POST" action="#">
-            <!-- EXIBIR CAMPOS DO FORM -->
-            <?php $colunas = 0; ?>
-            <?php foreach ($form->getElements() as $element): ?>
-            <?php if($colunas == 0): ?>
-            <div class="row" style="margin-top:20px;">
-            <?php endif; ?>
+  <form class="formulario campos-info" role="form" method="POST" action="#">
+    <?php foreach ($form->getElements() as $element): ?>
+      <p class="b3">
+          <label for="<?=$element->getName()?>"><?=$element->getLabel()?> </label>
+          <?= $this->formElement($element); ?>
+          <?= $this->formElementErrors($element, array('class' => 'alert alert-danger')); ?>
+      </p> 
+    <?php endforeach; ?>
+    <p>
+      <button type="submit" name="pesquisar" style="float: right;" value="pesquisar">
+          <i class="fas fa-search"></i> Pesquisar
+      </button>
 
-              <div class='col-sm-4'>
-                <div class="form-group">
+      <button type="submit" name="limpar" style="float: right;margin-right: 10px;" value="limpar">
+          <i class="fas fa-times"></i> Limpar
+      </button>
 
-                  <?php if($element->getLabel()) :?>
-                    <label for="<?=$element->getName()?>" style="width:139px;"><?=$element->getLabel()?></label>
-                  <?php endif;?>
-            
-                  <?= $this->formElement($element); ?>
-                  <?= $this->formElementErrors($element, array('class' => 'alert alert-danger')); ?>
+    </p>
 
-                </div>
-              </div>
-            <?php 
-              if($colunas == 2){
-                echo '</div>';
-                $colunas = 0;
-              }else{
-                $colunas++;
-              }
-            ?>
-          <?php endforeach; ?>
-            <?php 
-              if($colunas != 0){
-                echo '</div>';
-              }
-            ?>
-            <div class="row" style="margin-top:20px;">
-              
-              <button type="submit" class="btn btn-success" style="float: right;margin-right: 10px;">
-                <img src="<?= $this->basePath('img/pesquisar.png'); ?>" alt="Pesquisar"> Pesquisar
-              </button>
-              
-              <button name="limpar" type="submit" class="btn btn-default" 
-                  style="float: right;margin-right: 10px;">
-                <img src="<?= $this->basePath('img/limpar.png'); ?>"> Limpar
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
+  </form>
+  
