--- a/module/cliente/view/cliente/cliente/alterar.phtml
+++ b/module/cliente/view/cliente/cliente/alterar.phtml
@@ -1,92 +1,61 @@
- <div class="container theme-showcase" role="main" style="margin-bottom:10px;padding:0px;">
-      <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('novoCliente'); ?>'" style="float: right;width:100px;">
-      <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-      Novo</button>
+<div class="cont-admin">
+  <div class="content-sistema">
+    <h1><a href="<?= $this->url('indexCliente'); ?>">Clientes</a> / alterar </h1>
+    <div class="conteudo-sistema">
+      <a href="<?= $this->url('novoCliente'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+      <br>
+      <h2>Alterar cliente</h2>
+      <?php echo $this->partial('form/generic', array('form'=> $formCliente, 'route'=> ''))  ?>
 
-    <ol class="breadcrumb" style="margin-bottom: 0px;">
-      <li><a href="<?= $this->url('home'); ?>">Home</a> / </li>
-      <li><a href="<?= $this->url('indexCliente'); ?>">Clientes / </a></li>
-      <li class="active">Novo</li>
-    </ol>
-  </div>
 
-    <div class="container theme-showcase" role="main">
-      <div class="row">
-        <div class="panel panel-default">
-          <div class="panel-heading">
-              <h3 class="panel-title">Alterar cliente</h3>
-            </div>
-            <div class="panel-body">
-                <div class="form-group">
-                  <?php echo $this->partial('form/generic', array('form'=> $formCliente, 'route'=> '')) ?>
-
-            </div>
-          </div>
+      <!-- SUBFORM -->
+        <div class="bloco-padrao">
+          <a href="<?= $this->url('alterarCliente', array('id' => $cliente['id'])); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo usuário</a>
+          <h2>Adicionar ou alterar usuários do cliente <?= $cliente['nome'] ?></h2>
+           <?php echo $this->partial('form/generic', array('form'=> $formUsuario, 'route'=> '')) ?>
         </div>
-      </div>
-    </div>
 
-
-    <div class="container theme-showcase" role="main" style="margin-bottom:10px;padding:0px;">
-      <button type="button" class="btn btn-default" onclick="location.href='<?=  $this->url('alterarCliente', array('id' => $idCliente)); ?>'" style="float: right;width:100px;">
-      <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-      Novo usuário</button>
-    </div>
-
-
-    <div class="container theme-showcase" role="main">
-      <div class="row">
-        <div class="panel panel-success">
-          <div class="panel-heading">
-              <h3 class="panel-title">Cadastrar ou alterar usuário do cliente Magazine Luiza</h3>
-            </div>
-            <div class="panel-body">
-                <div class="form-group">
-                  <?php echo $this->partial('form/generic', array('form'=> $formUsuario, 'route'=> '')) ?>
-
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <div class="container theme-showcase" role="main">
-      <div class="row">
-        <div class="panel panel-success" style="width: 100%">
-          <div class="panel-heading">
-            <h3 class="panel-title">Usuários cadastrados</h3>
-          </div>
-          <div class="panel-body">
-            <?php if(count($usuarios) > 0): ?>
-              <table class="table">
-                <tr>
-                  <th style="text-align: center">Nome</th>
-                  <th style="text-align: center">Email</th>
-                  <th style="text-align: center">Status</th>
-                  <th style="text-align: center">Ações</th>
+        <div class="bloco-padrao">
+          <h2>Usuários do cliente <?= $cliente['nome'] ?></h2>
+           
+          <?php if($usuarios->count() > 0): ?>
+            <table class="table">
+              <tbody>
+                  <tr class="topo-tabela">
+                    <th style="text-align: center">Nome</th>
+                    <th style="text-align: center">Email</th>
+                    <th style="text-align: center">Status</th>
+                    <th style="text-align: center">Ações</th>
               </tr>
-              <?php foreach($usuarios as $usuario): ?>
-              <tr>
-                <td style="text-align: center"><?= $usuario['nome']; ?></td>
-                <td style="text-align: center"><?= $usuario['login']; ?></td>
-                <td style="text-align: center"><?= $this->ativo($usuario['ativo']); ?></td>
-                <td style="text-align: center;">
-                  <img src="<?= $this->basePath('img/editar.png'); ?>" title="Editar" 
-                  onclick="location.href='<?= $this->url('alterarCliente', array('id' => $idCliente, 'usuario' => $usuario['id'])); ?>'" style="cursor: pointer;">
-                  <span style="margin-right:4px;"></span> 
-                  <img src="<?= $this->basePath('img/deletar.png'); ?>" title="Deletar" 
-                onclick="alerta('<?= $this->url('deletarUsuarioCliente', array('id' => $idCliente, 'usuario' => $usuario['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" style="cursor: pointer;">
-                </td>
-              </tr>
-              <?php endforeach; ?>
+                  </tr>
+                  <?php foreach($usuarios as $usuario): ?>
+                    <tr>
+                        <td style="text-align: center"><?= $usuario['nome']; ?></td>
+                        <td style="text-align: center"><?= $usuario['login']; ?></td>
+                        <td style="text-align: center"><?= $this->ativo($cliente['ativo']); ?></td>
+                        <td style="text-align: center;">
+                            <a href="<?= $this->url('alterarCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
+                            <a  onclick="alerta('<?= $this->url('deletarUsuarioCliente', array('id' => $cliente['id'], 'usuario' => $usuario['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                        </td>
+                    </tr>
+                  <?php endforeach; ?>
+              </tbody>
             </table>
-          <?php else: ?>
-            <div class="alert alert-info">Nenhum usuário encontrado!</div>
-          <?php endif; ?>
-          </div>
+            <?php else: ?>
+              <div class="alert alert-info">Nenhum usuário encontrado!</div>
+            <?php endif; ?>
+
+
         </div>
-      </div>
     </div>
+  </div>
+</div>
+
+
+
+
+
+
 
     <script type="text/javascript">
       var maskBehavior = function (val) {
