--- a/module/dashboard/view/dashboard/categoria/index.phtml
+++ b/module/dashboard/view/dashboard/categoria/index.phtml
@@ -1,50 +1,46 @@
-<div class="container-fluid">
-  <div class="row" role="main" style="margin-bottom:10px;padding:0px;">
-     <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('novoCategoria'); ?>'" style="float: right;width:100px;">
-    <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-    Novo</button>
-  </div>
+<div class="cont-admin">
+  <div class="content-sistema">
+    <h1>Categorias de dashboard</h1>
+    <div class="conteudo-sistema">
+      <div class="bloco-padrao">
+        <h2>Categorias de dashboard do cliente <?= $cliente['nome'] ?></h2>
 
-    <div class="row">
-      <div class="panel panel-primary" style="width: 100%">
-        <div class="panel-heading">
-          <h3 class="panel-title">Categorias de dashboard do cliente <?= $cliente['nome'] ?></h3>
-        </div>
-        <div class="panel-body">
-          <?php if($categorias->count() > 0): ?>
-            <table class="table">
-              <tr>
+        <a href="<?= $this->url('novoCategoria'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+        <br>
+        <?php if($categorias->count() > 0): ?>
+        <table class="table">
+          <tbody>
+              <tr class="topo-tabela">
                 <th style="text-align: center">Nome</th>
                 <th style="text-align: center">Ordem</th>
                 <th style="text-align: center">Ações</th>
-            </tr>
-            <?php foreach($categorias as $categoria): ?>
-            <tr>
-              <td style="text-align: center"><img src="<?= $this->basePath($categoria['icone']) ?>"> <?= $categoria['nome']; ?></td>
-              <td style="text-align: center"><?= $categoria['ordem']; ?>º</td>
-              <td style="text-align: center;">
-                <img src="<?= $this->basePath('img/editar.png'); ?>" title="Editar" 
-                onclick="location.href='<?= $this->url('alterarCategoria', array('id' => $categoria['id'])); ?>'" style="cursor: pointer;">
-                <span style="margin-right:4px;"></span> 
-                  <img src="<?= $this->basePath('img/deletar.png'); ?>" title="Deletar" 
-                onclick="alerta('<?= $this->url('deletarCategoria', array('id' => $categoria['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar a categoria de dashboard?');" style="cursor: pointer;">
-              </td>
-            </tr>
-            <?php endforeach; ?>
-          </table>
+              </tr>
+              <?php foreach($categorias as $categoria): ?>
+                <tr>
+                  <td style="text-align: center"><img src="<?= $this->basePath($categoria['icone']) ?>"> <?= $categoria['nome']; ?></td>
+                  <td style="text-align: center"><?= $categoria['ordem']; ?>º</td>
+                  <td style="text-align: center;">
+                      <a href="<?= $this->url('alterarCategoria', array('id' => $categoria['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
+                      <a onclick="alerta('<?= $this->url('deletarCategoria', array('id' => $categoria['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar a categoria de dashboard?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                  </td>
+                </tr>
+              <?php endforeach; ?>
+          </tbody>
+        </table>
         <?php else: ?>
           <div class="alert alert-info">Nenhuma categoria de dashboard encontrada!</div>
         <?php endif; ?>
-        </div>
-      </div>
-    </div>
 
-    <div class="row" style="margin-top:0px;" role="main">
-      <div style="float:right;">
-        <?php echo $this->paginationControl($categorias,
+      </div>
+
+      <div class="paginacao">
+          <?php echo $this->paginationControl($categorias,
                                       'Sliding',
                                       'view/paginator', array('route' => 'indexCategoria')); 
         ?>
       </div>
+      
+
     </div>
-  </div>   
+  </div>
+</div>
