--- a/module/dashboard/view/dashboard/dashboard/index.phtml
+++ b/module/dashboard/view/dashboard/dashboard/index.phtml
@@ -1,56 +1,58 @@
-<div class="container fluid" role="main" style="">
-  <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
-</div>
+<div class="cont-admin">
+  <div class="content-sistema">
+    <h1>Clientes </h1>
+    <div class="conteudo-sistema">
+      <h2>Pesquisar dashboard</h2>
+     <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
 
-<div class="container-fluid">
-  <div class="row" role="main" style="margin-bottom:10px;padding:0px;">
-     <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('novoDashboard'); ?>'" style="float: right;width:100px;">
-    <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-    Novo</button>
-  </div>
 
-    <div class="row">
-      <div class="panel panel-primary" style="width: 100%">
-        <div class="panel-heading">
-          <h3 class="panel-title">Dashboards do cliente <?= $cliente['nome'] ?></h3>
-        </div>
-        <div class="panel-body">
-          <?php if($dashboards->count() > 0): ?>
-            <table class="table">
-              <tr>
+
+
+      <div class="bloco-padrao">
+        <h2>Dashboards do cliente <?= $cliente['nome'] ?></h2>
+
+        <a href="<?= $this->url('novoDashboard'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+        <br>
+        <?php if($dashboards->count() > 0): ?>
+        <table class="table">
+          <tbody>
+              <tr class="topo-tabela">
                 <th style="text-align: center">Categoria</th>
                 <th style="text-align: center">Nome</th>
                 <th style="text-align: center">Ordem</th>
                 <th style="text-align: center">Ações</th>
-            </tr>
-            <?php foreach($dashboards as $dashboard): ?>
-            <tr>
-              <td style="text-align: center"><?= $this->caracterVazio($dashboard['nome_categoria']); ?></td>
-              <td style="text-align: center"><img src="<?= $this->basePath($dashboard['icone']); ?>"> <?= $dashboard['nome']; ?></td>
-              <td style="text-align: center"><?= $dashboard['ordem']; ?>º</td>
-              <td style="text-align: center;">
-                  <img src="<?= $this->basePath('img/editar.png'); ?>" title="Editar" 
-                onclick="location.href='<?= $this->url('alterarDashboard', array('id' => $dashboard['id'])); ?>'" style="cursor: pointer;">
-                <span style="margin-right:4px;"></span> 
-                  <img src="<?= $this->basePath('img/deletar.png'); ?>" title="Deletar" 
-                onclick="alerta('<?= $this->url('deletarDashboard', array('id' => $dashboard['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o dashboard?');" style="cursor: pointer;">
-              </td>
-            </tr>
-            <?php endforeach; ?>
-          </table>
+              </tr>
+              <?php foreach($dashboards as $dashboard): ?>
+                <tr>
+                    <td style="text-align: center"><?= $this->caracterVazio($dashboard['nome_categoria']); ?></td>
+                    <td style="text-align: center">
+                      <img src="<?= $this->basePath($dashboard['icone']); ?>"> <?= $dashboard['nome']; ?>
+                    </td>
+                    <td style="text-align: center"><?= $dashboard['ordem']; ?>º</td>
+                    <td style="text-align: center;">
+                        <a href="<?= $this->url('alterarDashboard', array('id' => $dashboard['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
+                        <a onclick="alerta('<?= $this->url('deletarDashboard', array('id' => $dashboard['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o dashboard?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                    </td>
+                </tr>
+              <?php endforeach; ?>
+          </tbody>
+        </table>
         <?php else: ?>
-          <div class="alert alert-info">Nenhum dashboard encontrado!</div>
+          <div class="alert alert-info">Nenhuma dashboard encontrada!</div>
         <?php endif; ?>
-        </div>
-      </div>
-    </div>
 
-    <div class="row" style="margin-top:0px;" role="main">
-      <div style="float:right;">
-        <?php echo $this->paginationControl($dashboards,
-                                      'Sliding',
-                                      'view/paginator', array('route' => 'indexDashboard')); 
-        ?>
       </div>
+
+      <div class="paginacao">
+          <?php echo $this->paginationControl($dashboards,
+            'Sliding',
+            'view/paginator', array('route' => 'indexDashboard')); 
+          ?>
+      </div>
+      
+
     </div>
-  </div>   
+  </div>
+</div>
+
+
