--- a/module/dashboard/view/dashboard/dashboard/visualizardashboard.phtml
+++ b/module/dashboard/view/dashboard/dashboard/visualizardashboard.phtml
@@ -1,4 +1,19 @@
-<h1><?= $dashboard['descricao'] ?></h1>
-<div class="container theme-showcase" role="main">
- <iframe style="width: 100%; height: 100%" src="https://datastudio.google.com/embed/reporting/b3611dbb-d4c7-4494-bfab-10d7d2c2c0f1/page/1M" title="Dashboard 1"></iframe> 
-</div>
+<?php if(!empty($dashboard['link_google'])): ?>
+<iframe src="<?= $dashboard['link_google'] ?>" style="width: 100%; height: 600px;"></iframe>
+<?php endif; ?>
+
+
+<?php if(!empty($dashboard['workspace_id']) && !empty($dashboard['report_id'])): ?>
+  <div id="reportContainer" style="height: 600px;"></div>
+  <script>
+    var embedConfiguration= {
+      type: 'report',
+      id: "<?= $embed['id'] ?>", // the report ID
+      embedUrl: "<?= $embed['embedUrl'] ?>",
+      //tokenType: models.TokenType.Embed,
+      accessToken: "<?= $embed['token'] ?>" ,
+    };
+    var $reportContainer = $('#reportContainer');
+    var report = powerbi.embed($reportContainer.get(0), embedConfiguration);
+  </script>
+<?php endif; ?>
