--- a/module/invoice/view/invoice/invoice/alterar.phtml
+++ b/module/invoice/view/invoice/invoice/alterar.phtml
@@ -1,39 +1,17 @@
- <div class="container theme-showcase" role="main" style="margin-bottom:10px;padding:0px;">
-      <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('novoInvoice'); ?>'" style="float: right;">
-      <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-      Novo</button>
-
-      <a href="<?= $this->url('downloadInvoice', array('id' => $invoice['id'])) ?>">
-        <button type="button" class="btn btn-default" style="float: right;">
-        <img src="<?php echo $this->basePath('img/download.png') ?>" alt="Download arquivo">
-        Download arquivo</button>
-      </a>
-
+<div class="cont-admin">
+  <div class="content-sistema">
+    <h1><a href="<?= $this->url('indexInvoice'); ?>">Invoices</a> / alterar </h1>
+    <div class="conteudo-sistema">
+      <a href="<?= $this->url('novoInvoice'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+      <a href="<?= $this->url('downloadInvoice', array('id' => $invoice['id'])) ?>" class="botao" style="float: right;margin-right: 10px;"><i class="fas fa-download"></i> Download arquivo</a>
       <?php if($invoice['pago'] == 'N'): ?>
-      <button type="button" class="btn btn-default" onclick="alerta('<?= $this->url('pagarInvoice', array('id' => $invoice['id'])); ?>', 'Tem certeza que deseja marcar o invoice como pago?');" style="float: right;">
-      <img src="<?php echo $this->basePath('img/pagar.gif') ?>" alt="Pagar invoice">
-      Pagar invoice</button>
-    <?php endif; ?>
+      <a onclick="alerta('<?= $this->url('pagarInvoice', array('id' => $invoice['id'])); ?>', 'Tem certeza que deseja marcar o invoice como pago?');" class="botao" style="float: right;margin-right: 10px;"><i class="fas fa-credit-card"></i> Pagar</a>
+      <?php endif; ?>
+      <br>
+      <h2>Alterar invoice do cliente <?= $cliente['nome'] ?></h2>
 
-    <ol class="breadcrumb" style="margin-bottom: 0px;">
-      <li><a href="<?= $this->url('home'); ?>">Home</a> / </li>
-      <li><a href="<?= $this->url('indexInvoice'); ?>">Invoices / </a></li>
-      <li class="active">Alterar</li>
-    </ol>
+      <?php echo $this->partial('form/generic', array('form'=> $formInvoice, 'route'=> ''))  ?>
+
+    </div>
   </div>
-
-    <div class="container theme-showcase" role="main">
-      <div class="row">
-          <div class="panel panel-default">
-          <div class="panel-heading">
-              <h3 class="panel-title">Alterar invoice do cliente <?= $cliente['nome'] ?></h3>
-            </div>
-            <div class="panel-body">
-                <div class="form-group">
-                  <?php echo $this->partial('form/generic', array('form'=> $formInvoice, 'route'=> '')) ?>
-
-            </div>
-          </div>
-      </div>
-    </div>
-    </div>
+</div>
