--- a/module/invoice/view/invoice/invoice/index.phtml
+++ b/module/invoice/view/invoice/invoice/index.phtml
@@ -1,78 +1,69 @@
-<div class="container fluid" role="main" style="">
-  <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
-</div>
+<div class="cont-admin">
+  <div class="content-sistema">
+    <h1>Invoices </h1>
+    <div class="conteudo-sistema">
+      <h2>Pesquisar invoices</h2>
+     <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
 
-<div class="container-fluid">
-  <div class="row" role="main" style="margin-bottom:10px;padding:0px;">
-     <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('novoInvoice'); ?>'" style="float: right;width:100px;">
-    <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-    Novo</button>
-  </div>
 
-    <div class="row">
-      <div class="panel panel-primary" style="width: 100%">
-        <div class="panel-heading">
-          <h3 class="panel-title">Invoices do cliente <?= $cliente['nome'] ?></h3>
-        </div>
-        <div class="panel-body">
-          <?php if($invoices->count() > 0): ?>
-            <table class="table">
-              <tr>
+
+
+      <div class="bloco-padrao">
+        <h2>Invoices do cliente <?= $cliente['nome'] ?></h2>
+
+        <a href="<?= $this->url('novoInvoice'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+        <br>
+        <?php if($invoices->count() > 0): ?>
+        <table class="table">
+          <tbody>
+              <tr class="topo-tabela">
                 <th style="text-align: center">Descrição</th>
                 <th style="text-align: center">Valor</th>
                 <th style="text-align: center">Data de referência</th>
                 <th style="text-align: center">Status</th>
                 <th style="text-align: center">Ações</th>
-            </tr>
-            <?php foreach($invoices as $invoice): ?>
-            <tr>
-              <td style="text-align: center"><?= $invoice['descricao']; ?></td>
-              <td style="text-align: center"><?= $this->exibirMonetario($invoice['valor']); ?></td>
-              <td style="text-align: center"><?= $this->converterData($invoice['data_vencimento']); ?></td>
-              <td style="text-align: center"><?= $invoice['pago'] == 'S' ? 'Pago' : 'Em aberto' ?></td>
-              <td style="text-align: center;">
-                  <img src="<?= $this->basePath('img/editar.png'); ?>" title="Editar" 
-                onclick="location.href='<?= $this->url('alterarInvoice', array('id' => $invoice['id'])); ?>'" style="cursor: pointer;">
-                <?php if($invoice['pago'] == 'S'): ?>
-                  <span style="margin-right:4px;"></span> 
-                    <img src="<?= $this->basePath('img/pago.png'); ?>" title="Invoice pago" style="cursor: pointer;">
-                <?php else: ?>
-                  <span style="margin-right:4px;"></span> 
-                    <img src="<?= $this->basePath('img/pagar.gif'); ?>" title="Pagar invoice"  
-                  onclick="alerta('<?= $this->url('pagarInvoice', array('id' => $invoice['id'])); ?>', 'Tem certeza que deseja marcar o invoice como pago?');" style="cursor: pointer;">
-                <?php endif; ?>
+              </tr>
+              <?php foreach($invoices as $invoice): ?>
+                <tr>
+                  <td style="text-align: center"><?= $invoice['descricao']; ?></td>
+                  <td style="text-align: center"><?= $this->exibirMonetario($invoice['valor']); ?></td>
+                  <td style="text-align: center"><?= $this->converterData($invoice['data_vencimento']); ?></td>
+                  <td style="text-align: center"><?= $invoice['pago'] == 'S' ? 'Pago' : 'Em aberto' ?></td>
 
-                <span style="margin-right:4px;"></span> 
-                <a href="<?= $this->url('downloadInvoice', array('id' => $invoice['id'])) ?>">
-                  <img src="<?= $this->basePath('img/download.png'); ?>" title="Download do arquivo" style="cursor: pointer;">
-                </a>
-                <span style="margin-right:4px;"></span> 
-                  <img src="<?= $this->basePath('img/deletar.png'); ?>" title="Deletar" 
-                onclick="alerta('<?= $this->url('deletarInvoice', array('id' => $invoice['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o invoice?');" style="cursor: pointer;">
-              </td>
-            </tr>
-            <?php endforeach; ?>
-          </table>
+                    <td style="text-align: center;">
+                        <a href="<?= $this->url('alterarInvoice', array('id' => $invoice['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
+
+                        <a href="<?= $this->url('downloadInvoice', array('id' => $invoice['id'])) ?>" class="bt-download"><i class="fas fa-download"></i></a>
+                        
+                        <?php if($invoice['pago'] == 'S'): ?>
+                          <a href="#" class="bt-pago"><i class="fas fa-credit-card"></i></a>
+                        <?php else: ?>
+                          <a onclick="alerta('<?= $this->url('pagarInvoice', array('id' => $invoice['id'])); ?>', 'Tem certeza que deseja marcar o invoice como pago?');" class="bt-pagar"><i class="fas credit-card-alt"></i></a>
+                        <?php endif; ?>
+                        
+                        <a onclick="alerta('<?= $this->url('deletarInvoice', array('id' => $invoice['id'])); ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o invoice?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                    </td>
+                </tr>
+              <?php endforeach; ?>
+          </tbody>
+        </table>
         <?php else: ?>
           <div class="alert alert-info">Nenhum invoice encontrado!</div>
         <?php endif; ?>
-        </div>
-      </div>
-    </div>
 
-    <div class="row" style="margin-top:0px;" role="main">
-      <div style="float:right;">
+      </div>
+
+      <div class="paginacao">
         <?php echo $this->paginationControl($invoices,
                                       'Sliding',
                                       'view/paginator', array('route' => 'indexInvoice')); 
         ?>
       </div>
-    </div>
-  </div>   
+      
 
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $("#data_inicio").mask("99/99/9999");
-        $("#data_fim").mask("99/99/9999");
-      });
-    </script>
+    </div>
+  </div>
+</div>
+
+
+
