--- a/module/invoice/view/invoice/invoice/novo.phtml
+++ b/module/invoice/view/invoice/invoice/novo.phtml
@@ -1,34 +1,7 @@
- <div class="container theme-showcase" role="main" style="margin-bottom:10px;padding:0px;">
-      <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('novoInvoice'); ?>'" style="float: right;width:100px;">
-      <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-      Novo</button>
+    <h1><a href="<?= $this->url('indexInvoice'); ?>">Invoices</a> / novo </h1>
+    <div class="conteudo-sistema">
+      <a href="<?= $this->url('novoInvoice'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+      <h2>inserir invoice para o cliente <?= $cliente['nome'] ?></h2>
+      <?php echo $this->partial('form/generic', array('form'=> $formInvoice, 'route'=> ''))  ?>
 
-    <ol class="breadcrumb" style="margin-bottom: 0px;">
-      <li><a href="<?= $this->url('home'); ?>">Home</a> / </li>
-      <li><a href="<?= $this->url('indexInvoice'); ?>">Invoices / </a></li>
-      <li class="active">Novo</li>
-    </ol>
-  </div>
-
-    <div class="container theme-showcase" role="main">
-      <div class="row">
-          <div class="panel panel-default">
-          <div class="panel-heading">
-              <h3 class="panel-title">Cadastro de invoice para o cliente <?= $cliente['nome'] ?></h3>
-            </div>
-            <div class="panel-body">
-                <div class="form-group">
-                  <?php echo $this->partial('form/generic', array('form'=> $formInvoice, 'route'=> '')) ?>
-
-            </div>
-          </div>
-      </div>
     </div>
-    </div>
-
-    <script type="text/javascript">
-      $(document).ready(function() {
-        $("#valor").maskMoney({symbol:'R$ ', showSymbol:true, thousands:'.', decimal:',', symbolStay: true, allowZero: true});
-        $("#data_vencimento").mask("99/99/9999");
-      });
-    </script>
