--- a/module/cliente/view/cliente/cliente/ativarusuariocliente.phtml
+++ b/module/cliente/view/cliente/cliente/ativarusuariocliente.phtml
@@ -1,25 +1,15 @@
-    <div class="container theme-showcase" role="main">
-      <?php if($usuario): ?>
-      <div class="row">
-          <div class="panel panel-default">
-          <div class="panel-heading">
-              <h3 class="panel-title">Confirme seus dados para ativar a conta</h3>
-            </div>
-            <div class="panel-body">
-                <div class="form-group">
-                  <?php echo $this->partial('form/umacoluna', array('form'=> $formUsuario, 'route'=> '')) ?>
-
-            </div>
-          </div>
-      </div>
-    </div>
+<div class="bloco-login">
+    <div class="logo"></div>
+    <?php if($usuario): ?>
+      <?php echo $this->partial('form/umacoluna', array('form'=> $formUsuario, 'route'=> '', 'nomeBotao' => 'Ativar conta')) ?>  
     <?php else: ?>
       <div class="alert alert-warning" role="alert">
         Usuário não encontrado, verifique se seu link é válido ou entre em contato com o administrador.
       </div>
     <?php endif; ?>
-  </div>
+</div>
 
+<?php if($usuario): ?>
   <script type="text/javascript">
     var maskBehavior = function (val) {
      return val.replace(/\D/g, '').length === 11 ? '(00) 00000-0000' : '(00) 0000-00009';
@@ -31,3 +21,4 @@
      
     $('#telefone').mask(maskBehavior, options);
   </script>
+<?php endif; ?>
