--- a/module/usuario/view/usuario/usuario/index.phtml
+++ b/module/usuario/view/usuario/usuario/index.phtml
@@ -1,68 +1,53 @@
- <div class="container theme-showcase" role="main" style="margin-bottom:10px;padding:0px;">
-      <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('usuarioNovo'); ?>'" style="float: right;width:100px;">
-      <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-      Novo</button>
+    <h1>Usuários </h1>
+    <div class="conteudo-sistema">
+      <h2>Pesquisar usuário</h2>
+     <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
 
-    <ol class="breadcrumb" style="margin-bottom: 0px;">
-      <li class="active">Usuário</li>
-    </ol>
-  </div>
-<div class="container fluid" role="main" style="">
-    <?php echo $this->partial('form/pesquisa', array('form'=> $formPesquisa, 'route'=> '')) ?>
-</div>
 
-  <div class="container-fluid">
-    <div class="row">
-      <div class="panel panel-primary" style="width: 100%">
-        <div class="panel-heading">
-          <h3 class="panel-title">usuários</h3>
-        </div>
-        <div class="panel-body">
-          <?php if($usuarios->count() > 0): ?>
-            <table class="table">
-              <tr>
+
+
+      <div class="bloco-padrao">
+        <h2>Usuários</h2>
+
+        <a href="<?= $this->url('usuarioNovo'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+        <br>
+        <?php if($usuarios->count() > 0): ?>
+        <table class="table">
+          <tbody>
+              <tr class="topo-tabela">
                 <th style="text-align: center">Nome</th>
                 <th style="text-align: center">Login</th>
                 <th style="text-align: center">Tipo</th>
                 <th style="text-align: center">Status</th>
                 <th style="text-align: center">Ações</th>
-            </tr>
-            <?php foreach($usuarios as $usuario): ?>
-            <tr>
-              <td style="text-align: center"><?= $usuario['nome']; ?></td>
-              <td style="text-align: center"><?= $usuario['login']; ?></td>
-              <td style="text-align: center"><?= $usuario['perfil']; ?></td>
+              </tr>
+              <?php foreach($usuarios as $usuario): ?>
+                <tr>
+                    <td style="text-align: center"><?= $usuario['nome']; ?></td>
+                    <td style="text-align: center"><?= $usuario['login']; ?></td>
+                    <td style="text-align: center"><?= $usuario['perfil']; ?></td>
+                    <td style="text-align: center"><?= $this->ativo($usuario['ativo']); ?></td>
+                    <td style="text-align: center;">
+                        <a href="<?= $this->url('usuarioAlterar', array('id' => $usuario['id'])); ?>" class="bt-editar"><i class="fas fa-edit"></i></a>
+                        <a onclick="alerta('<?= $this->url('usuarioDeletar', array('id' => $usuario['id'])) ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');" class="bt-deletar"><i class="fas fa-minus-circle"></i></a>
+                    </td>
+                </tr>
 
-              <td style="text-align: center"><?= $this->ativo($usuario['ativo']); ?></td>
-              <td style="text-align: center;">
-                <img src="<?= $this->basePath('img/editar.png'); ?>" title="Editar" 
-                onclick="location.href='<?= $this->url('usuarioAlterar', array('id' => $usuario['id'])); ?>'" style="cursor: pointer;">
-                <span style="margin-right:4px;"></span>  
-                <img src="<?= $this->basePath('img/deletar.png'); ?>" title="Deletar" style="cursor: pointer;" onclick="alerta('<?= $this->url('usuarioDeletar', array('id' => $usuario['id'])) ?>', 'Esta operação é irreversível. Tem certeza que deseja deletar o usuário?');">
-              </td>
-            </tr>
-            <?php endforeach; ?>
-          </table>
+              <?php endforeach; ?>
+          </tbody>
+        </table>
         <?php else: ?>
           <div class="alert alert-info">Nenhum usuário encontrado!</div>
         <?php endif; ?>
-        </div>
+
       </div>
-    </div>
-    <div class="row" style="margin-top:0px;">
-      <div style="float:right;">
-        <?php echo $this->paginationControl($usuarios,
-                                      'Sliding',
-                                      'view/paginator', array('route' => 'usuario')); 
-        ?>
+
+      <div class="paginacao">
+          <?php echo $this->paginationControl($usuarios,
+            'Sliding',
+            'view/paginator', array('route' => 'usuario')); 
+          ?>
       </div>
+      
+
     </div>
-  </div>
-
-
-
-    <script type="text/javascript">
-      $(document).ready(function() {
-        formUnidade();
-      });
-    </script>
