--- a/module/usuario/view/usuario/usuario/novo.phtml
+++ b/module/usuario/view/usuario/usuario/novo.phtml
@@ -1,27 +1,9 @@
- <div class="container theme-showcase" role="main" style="margin-bottom:10px;padding:0px;">
-      <button type="button" class="btn btn-default" onclick="location.href='<?= $this->url('usuarioNovo'); ?>'" style="float: right;width:100px;">
-      <img src="<?php echo $this->basePath('img/novo.png') ?>" alt="Novo">
-      Novo</button>
+    <h1><a href="<?= $this->url('usuario'); ?>">Usuários</a> / novo </h1>
+    <div class="conteudo-sistema">
+      <a href="<?= $this->url('usuarioNovo'); ?>" class="botao" style="float: right;"><i class="far fa-plus-square"></i> Novo</a>
+      <br>
+      <h2>Inserir usuário</h2>
 
-    <ol class="breadcrumb" style="margin-bottom: 0px;">
-      <li><a href="<?= $this->url('home'); ?>">Home</a> / </li>
-      <li><a href="<?= $this->url('usuario'); ?>">Usuários / </a></li>
-      <li class="active">Novo</li>
-    </ol>
-  </div>
+      <?php echo $this->partial('form/generic', array('form'=> $formUsuario, 'route'=> '')) ?>
 
-    <div class="container theme-showcase" role="main">
-      <div class="row">
-          <div class="panel panel-default" style="width: 100%">
-          <div class="panel-heading">
-              <h3 class="panel-title">Cadastro de usuário</h3>
-            </div>
-            <div class="panel-body">
-                <div class="form-group">
-                  <?php echo $this->partial('form/generic', array('form'=> $formUsuario, 'route'=> '')) ?>
-
-            </div>
-          </div>
-      </div>
-    </div>
     </div>
