--- a/module/usuario/view/usuario/usuario/tokenrecuperar.phtml
+++ b/module/usuario/view/usuario/usuario/tokenrecuperar.phtml
@@ -1,15 +1,7 @@
-  <div class="container theme-showcase" role="main" style="max-width: 35%;">
-    <div class="row">
-        <div class="panel panel-default">
-        <div class="panel-heading">
-            <h3 class="panel-title">Recuperar minha senha</h3>
-          </div>
-          <div class="panel-body">
-              <div class="form-group">
-                <?php echo $this->partial('form/umacoluna', array('form'=> $form, 'route'=> '')) ?>
+  <div class="bloco-login">
+    <div class="logo"></div>
+      <?php echo $this->partial('form/umacoluna', array('form'=> $form, 'route'=> '', 'nomeBotao' => 'Recuperar senha')) ?>  
+</div>
 
-          </div>
-        </div>
-    </div>
-  </div>
-  </div>
+
+
